// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plansField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <table
        class="uv_4bym9s1"
      >
        <thead>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow16 uv_m4c9ow1a"
              >
                Features
              </span>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
            >
              <span
                class="uv_4bym9s2 uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy7 uv_1yf71jyf uv_1yf71jyn uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owq uv_m4c9ow1a"
                style="--uv_qabug41: nowrap;"
              >
                Out of stock
              </span>
              <div
                class="uv_4bym9se uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u41 uv_toi52u5v"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy1 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owp uv_m4c9ow1d"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="starter"
                      >
                        Starter
                      </label>
                    </span>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1e"
                      >
                        €0.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                        style="min-height: 16px;"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9owp uv_m4c9ow1e"
                        >
                          /month
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_4bym9sf"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owp"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p>
                          For developers & non mission-critical projects 
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u41 uv_toi52u5v"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe4 uv_e1wcoe9 uv_e1wcoef uv_e1wcoei uv_e1wcoel"
                    type="button"
                  >
                    Select plan
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Cache
                  </p>
                  <div
                    aria-controls="_r_8_"
                    aria-describedby="_r_8_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €0.0135 per GB additionnal
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                100 GB
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Pipeline
                  </p>
                  <div
                    aria-controls="_r_c_"
                    aria-describedby="_r_c_"
                    class="uv_w40vpo9"
                    tabindex="-1"
                  >
                    <button
                      class="uv_4bym9s0"
                      data-testid="hint-popover"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <title>
                          InformationOutlineIcon
                        </title>
                        <path
                          clip-rule="evenodd"
                          d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €4.00 per additional
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                1 pipeline
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Custom domaine
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz1a"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CloseIcon
                </title>
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94z"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    SSL Certificate
                  </p>
                  <div
                    aria-controls="_r_h_"
                    aria-describedby="_r_h_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Egress fees
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</DocumentFragment>
`;

exports[`plansField > should render reuqired 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <table
        class="uv_4bym9s1"
      >
        <thead>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow16 uv_m4c9ow1a"
              >
                Features
              </span>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
            >
              <span
                class="uv_4bym9s2 uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy7 uv_1yf71jyf uv_1yf71jyn uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owq uv_m4c9ow1a"
                style="--uv_qabug41: nowrap;"
              >
                Out of stock
              </span>
              <div
                class="uv_4bym9se uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u41 uv_toi52u5v"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy1 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owp uv_m4c9ow1d"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="starter"
                      >
                        Starter
                      </label>
                    </span>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1e"
                      >
                        €0.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                        style="min-height: 16px;"
                      >
                        <span
                          class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owc uv_m4c9owp uv_m4c9ow1e"
                        >
                          /month
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_4bym9sf"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owp"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p>
                          For developers & non mission-critical projects 
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u41 uv_toi52u5v"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe4 uv_e1wcoe9 uv_e1wcoef uv_e1wcoei uv_e1wcoel"
                    type="button"
                  >
                    Select plan
                  </button>
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s9"
            >
              <input
                class="uv_4bym9sd"
                data-testid="advanced"
                id="advanced"
                name="plans"
                type="radio"
                value="advanced"
              />
              <div
                class="uv_4bym9se uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3v uv_toi52u77"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u41 uv_toi52u5v"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                  >
                    <span
                      class="uv_1yf71jy0 uv_1yf71jy2 uv_1yf71jy8 uv_1yf71jye uv_1yf71jyh uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                      style="--uv_qabug41: nowrap;"
                    >
                      <label
                        for="advanced"
                      >
                        Advanced
                      </label>
                    </span>
                    <svg
                      class="uv_icons_q76b9r3 uv_icons_q76b9r5"
                      height="64"
                      viewBox="0 0 64 64"
                      width="64"
                    >
                      <title>
                        EntrepriseSupportProductIcon
                      </title>
                      <g
                        class="sentiment=original, size=xlarge, disabled=false"
                        clip-path="url(#a)"
                      >
                        <g
                          class=".Square"
                        >
                          <g
                            class="fillWeak"
                          >
                            <path
                              d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48V16Z"
                              fill="#521094"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M48 2H16C8.268 2 2 8.268 2 16v32c0 7.732 6.268 14 14 14h32c7.732 0 14-6.268 14-14V16c0-7.732-6.268-14-14-14ZM16 0C7.163 0 0 7.163 0 16v32c0 8.837 7.163 16 16 16h32c8.837 0 16-7.163 16-16V16c0-8.837-7.163-16-16-16H16Z"
                              fill="#521094"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                        <g
                          class="Icon"
                        >
                          <path
                            class="fillStrong"
                            clip-rule="evenodd"
                            d="M32 35c-5.799 0-10.5 4.701-10.5 10.5 0 2.1.616 4.053 1.676 5.693a1 1 0 0 1 .126.802l-.985 3.676 3.904-1.046a1 1 0 0 1 .74.09A10.449 10.449 0 0 0 32 56c5.799 0 10.5-4.701 10.5-10.5S37.799 35 32 35ZM19.5 45.5C19.5 38.596 25.096 33 32 33s12.5 5.596 12.5 12.5S38.904 58 32 58c-2.027 0-3.944-.483-5.64-1.342l-5.199 1.393a1 1 0 0 1-1.225-1.224l1.322-4.932A12.447 12.447 0 0 1 19.5 45.5Z"
                            fill="#BF95F9"
                            fill-rule="evenodd"
                          />
                          <g
                            class="fill"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M31.999 6c-5.117 0-9.492 3.17-11.265 7.648A3.66 3.66 0 0 0 19 16.763v2.662a3.662 3.662 0 0 0 3.663 3.663h2.396A8.547 8.547 0 0 0 32 26.638c2.858 0 5.389-1.4 6.942-3.551h2.395a3.662 3.662 0 0 0 3.662-3.663v-2.662a3.66 3.66 0 0 0-1.736-3.116A12.11 12.11 0 0 0 31.999 6Zm0 2a10.109 10.109 0 0 0-8.788 5.1h1.847A8.547 8.547 0 0 1 32 9.55a8.547 8.547 0 0 1 6.94 3.55h1.846A10.108 10.108 0 0 0 32 8Zm-8.553 10.094c0 1.054.19 2.062.54 2.994h-1.324A1.662 1.662 0 0 1 21 19.425v-2.662c0-.918.744-1.662 1.662-1.662h1.323a8.516 8.516 0 0 0-.54 2.993ZM40.014 15.1c.35.932.54 1.94.54 2.994 0 1.053-.19 2.062-.54 2.993h1.323c.918 0 1.662-.744 1.662-1.663v-2.662c0-.918-.744-1.662-1.662-1.662h-1.323Zm-14.568 2.994c0-3.612 2.933-6.543 6.554-6.543 3.621 0 6.554 2.93 6.554 6.543S35.621 24.638 32 24.638a6.549 6.549 0 0 1-6.554-6.544Z"
                              fill="#fff"
                              fill-rule="evenodd"
                            />
                            <path
                              d="M44.471 44.65a12.678 12.678 0 0 1-.024 2.013c4.155.524 8.378.328 12.482-.588.023.002.047.002.071.002a1 1 0 0 0 1-1V40.68a6.347 6.347 0 0 0-6.347-6.347h-5.306a6.33 6.33 0 0 0-2.346.448 8.062 8.062 0 0 0-7.952-6.742h-8.1a8.062 8.062 0 0 0-7.952 6.741 6.33 6.33 0 0 0-2.344-.447h-5.306A6.347 6.347 0 0 0 6 40.68v4.353a1 1 0 0 0 .774.974 36.408 36.408 0 0 0 12.78.656 12.665 12.665 0 0 1-.025-2.014c-3.834.51-7.731.37-11.529-.42V40.68c0-2.4 1.946-4.347 4.347-4.347h5.306a4.32 4.32 0 0 1 2.237.62v5.437a12.448 12.448 0 0 1 2-4.243V36.1a6.06 6.06 0 0 1 6.06-6.06h8.099a6.06 6.06 0 0 1 6.06 6.06v2.046a12.445 12.445 0 0 1 2 4.238v-5.43a4.327 4.327 0 0 1 2.238-.62h5.306c2.4 0 4.347 1.946 4.347 4.347v3.55a34.463 34.463 0 0 1-11.529.42Z"
                              fill="#fff"
                            />
                            <path
                              clip-rule="evenodd"
                              d="M42.666 27.333a6.333 6.333 0 1 1 12.667 0 6.333 6.333 0 0 1-12.666 0ZM49 23a4.333 4.333 0 1 0 0 8.667A4.333 4.333 0 0 0 49 23Zm-34-2a6.333 6.333 0 1 0 0 12.667A6.333 6.333 0 0 0 15 21Zm-4.334 6.333a4.333 4.333 0 1 1 8.667 0 4.333 4.333 0 0 1-8.666 0ZM32 38.5a1 1 0 0 1 .897.557l1.53 3.102 3.423.497a1 1 0 0 1 .554 1.706l-2.476 2.414.584 3.41a1 1 0 0 1-1.45 1.053L32 49.63l-3.061 1.61a1 1 0 0 1-1.451-1.054l.584-3.409-2.476-2.414a1 1 0 0 1 .554-1.706l3.423-.497 1.53-3.102A1 1 0 0 1 32 38.5Zm0 3.26-.867 1.756a1 1 0 0 1-.753.547l-1.937.281 1.402 1.367a1 1 0 0 1 .287.885l-.33 1.93 1.733-.911a1 1 0 0 1 .93 0l1.734.911-.331-1.93a1 1 0 0 1 .287-.885l1.402-1.367-1.937-.281a1 1 0 0 1-.753-.547L32 41.76Z"
                              fill="#fff"
                              fill-rule="evenodd"
                            />
                          </g>
                        </g>
                      </g>
                      <defs>
                        <clippath
                          class="a"
                          id="a"
                        >
                          <path
                            d="M0 0h64v64H0z"
                            fill="#fff"
                          />
                        </clippath>
                      </defs>
                    </svg>
                    <div
                      class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                    >
                      <span
                        class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owc uv_m4c9ow16 uv_m4c9ow1a uv_m4c9ow2e"
                      >
                        €109.99
                      </span>
                      <div
                        class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
                        style="min-height: 16px;"
                      />
                    </div>
                  </div>
                  <div
                    class="uv_4bym9sf"
                  >
                    <div
                      class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owp uv_m4c9ow1a"
                    >
                      <div
                        style="display: flex; flex-direction: column; gap: 16px;"
                      >
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                        <p>
                          For fast-growing starups & mission-critical infrastructure
                        </p>
                        <hr
                          aria-orientation="horizontal"
                          class="uv_bu43fbb uv_bu43fbc uv_bu43fbi"
                          style="--uv_bu43fb0: 1px;"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2d uv_toi52u31 uv_toi52u41 uv_toi52u5v"
                  style="--uv_4k0ekn0: 100%;"
                >
                  <button
                    class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe4 uv_e1wcoe9 uv_e1wcoef uv_e1wcoei uv_e1wcoel"
                    type="button"
                  >
                    Select plan
                  </button>
                </div>
              </div>
            </td>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Cache
                  </p>
                  <div
                    aria-controls="_r_v_"
                    aria-describedby="_r_v_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €0.0135 per GB additionnal
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                100 GB
              </span>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s9"
              data-testid="advanced-gb"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                10 TB
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Pipeline
                  </p>
                  <div
                    aria-controls="_r_14_"
                    aria-describedby="_r_14_"
                    class="uv_w40vpo9"
                    tabindex="-1"
                  >
                    <button
                      class="uv_4bym9s0"
                      data-testid="hint-popover"
                      tabindex="0"
                      type="button"
                    >
                      <svg
                        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <title>
                          InformationOutlineIcon
                        </title>
                        <path
                          clip-rule="evenodd"
                          d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <div
                  class="uv_m4c9ow0 uv_m4c9ow7 uv_m4c9owb uv_m4c9owp uv_m4c9ow1d uv_m4c9ow35"
                  style="--uv_qabug40: start;"
                >
                  €4.00 per additional
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow1 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow22"
              >
                1 pipeline
              </span>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s9"
              data-testid="advanced-pipeline"
            >
              <span
                class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              >
                100 pipelines
              </span>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Custom domaine
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkze uv_icons_1sbwqkz1a"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CloseIcon
                </title>
                <path
                  d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94z"
                />
              </svg>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s9"
              data-testid="advanced-domain"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    SSL Certificate
                  </p>
                  <div
                    aria-controls="_r_1a_"
                    aria-describedby="_r_1a_"
                    class="uv_w40vpo9"
                    tabindex="0"
                  >
                    <svg
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz26"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        InformationOutlineIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M8 2.3125C4.85888 2.3125 2.3125 4.85888 2.3125 8C2.3125 11.1411 4.85888 13.6875 8 13.6875C11.1411 13.6875 13.6875 11.1411 13.6875 8C13.6875 4.85888 11.1411 2.3125 8 2.3125ZM1 8C1 4.13401 4.13401 1 8 1C11.866 1 15 4.13401 15 8C15 11.866 11.866 15 8 15C4.13401 15 1 11.866 1 8ZM7.34375 5.35677C7.34375 4.99433 7.63756 4.70052 8 4.70052H8.00529C8.36772 4.70052 8.66154 4.99433 8.66154 5.35677V5.36206C8.66154 5.72449 8.36772 6.01831 8.00529 6.01831H8C7.63756 6.01831 7.34375 5.72449 7.34375 5.36206V5.35677ZM7.55734 8.12213C7.28751 8.1578 7.01294 8.02195 6.88439 7.76484C6.7223 7.44066 6.8537 7.04647 7.17787 6.88439L7.20711 6.86976C8.11256 6.41704 9.13206 7.23485 8.88653 8.21695L8.44266 9.99246C8.71249 9.95679 8.98705 10.0926 9.11561 10.3497C9.2777 10.6739 9.14631 11.0681 8.82214 11.2302L8.79289 11.2448L8.79289 11.2448C7.88744 11.6975 6.86794 10.8797 7.11347 9.89764L7.55734 8.12213Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s9"
              data-testid="advanced-ssl"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
          <tr>
            <td
              class="uv_4bym9s3"
            >
              <div
                class="uv_toi52u0 uv_toi52u1 uv_toi52u2d uv_toi52u31 uv_toi52u5v"
              >
                <div
                  class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u31 uv_toi52u3p uv_toi52u5v"
                >
                  <p
                    class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9own uv_m4c9ow1a"
                  >
                    Egress fees
                  </p>
                  <div />
                </div>
              </div>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s5"
              data-testid="starter-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkzn"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
            <td
              class="uv_4bym9s3 uv_4bym9s9"
              data-testid="advanced-fees"
            >
              <svg
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzf uv_icons_1sbwqkz1j"
                height="20"
                viewBox="0 0 20 20"
                width="20"
              >
                <title>
                  CheckCircleIcon
                </title>
                <path
                  clip-rule="evenodd"
                  d="M10 18C14.4183 18 18 14.4183 18 10C18 5.58172 14.4183 2 10 2C5.58172 2 2 5.58172 2 10C2 14.4183 5.58172 18 10 18ZM13.8566 8.19113C14.1002 7.85614 14.0261 7.38708 13.6911 7.14345C13.3561 6.89982 12.8871 6.97388 12.6434 7.30887L9.15969 12.099L7.28033 10.2197C6.98744 9.92678 6.51256 9.92678 6.21967 10.2197C5.92678 10.5126 5.92678 10.9874 6.21967 11.2803L8.71967 13.7803C8.87477 13.9354 9.08999 14.0149 9.30867 13.9977C9.52734 13.9805 9.72754 13.8685 9.85655 13.6911L13.8566 8.19113Z"
                  fill-rule="evenodd"
                />
              </svg>
            </td>
          </tr>
        </tbody>
      </table>
    </form>
  </div>
</DocumentFragment>
`;
